<resources>
    <string name="box_browsesdk_title" description="Default title for the Browse SDK">Browse</string>
    <string name="box_browsesdk_problem_fetching_folder">Problem fetching folder.</string>
    <string name="box_browsesdk_problem_performing_search">Problem performing search.</string>
    <string name="box_browsesdk_cannot_view_folder" description="Error message shown when the user does not have sufficient permissions to view the items in the folder or it is not available">You cannot view the items in this folder.</string>
    <string name="box_browsesdk_network_error" description="Toast message that indicates that an error occurred while performing an action">Network error. Please try again.</string>
    <string name="box_browsesdk_session_is_not_authenticated" description="Toast message that indicates that the provided authentication session is not valid">Session is not authenticated</string>
    <string name="box_browsesdk_no_item_selected" description="Toast message that indicates that an invalid item was provided to browse on">No item selected</string>

    <string name="box_browsesdk_all_files" description="Title shown for the parent folder when it is at the root level">All Files</string>

    <string name="box_browsesdk_action_settings" description="Accessibility title for the settings menu action in the toolbar">Settings</string>
    <string name="box_browsesdk_action_search" description="Accessibility title for the search menu action in the toolbar">Search</string>
    <string name="box_browsesdk_create_folder" description="Accessibility title for the create folder menu action in the toolbar">Create Folder</string>
    <string name="box_browsesdk_select_folder" description="Button text shown at the bottom of the activity to allow the user to select the current folder as the folder that should be returned">Select this folder</string>
    <string name="box_browsesdk_dialog_ok">OK</string>
    <string name="box_browsesdk_dialog_cancel">CANCEL</string>

    <string name="box_browsesdk_create_folder_conflict">A folder with that name has already been created.</string>
    <string name="box_browsesdk_error_retrieving_items">Error retrieving items</string>
    <string name="box_browsesdk_tap_to_retry">Tap to retry</string>
    <string name="box_browsesdk_performing_search">Performing search&#8230;</string>
    <string name="box_browsesdk_see_additional_results">See additional results</string>
    <string name="box_browsesdk_search_hint">Search</string>
    <string name="box_browsesdk_recent_searches_header">Recent Searches</string>
    <string name="box_browsesdk_search_results_header">Results in <![CDATA[<b>%1$s</b>]]></string>

    <string name="search_hint" description="hint text for Search View. Argument represents a folder name">Search in %1$s</string>
    <string name="filter_results_header" description="Label for button that launches screen to filter search results">Filter Results</string>
    <string name="filter_search_results" description="Header text for refine search results activity">Refine Search Results</string>
    <string name="apply" description="label for apply button in refine search results activity">Apply</string>
    <string name="clear_filters" description="label for clear filters button in refine search results activity">Clear Filters</string>
    <string name="file_type_label" description="Header for section that let you select file types to search for">File Type</string>
    <string name="search_filter_file_type_pdf" description="File type to search for">PDF</string>
    <string name="search_filter_file_type_spreadsheet" description="File type to search for">Spreadsheet</string>
    <string name="search_filter_file_type_presentation" description="File type to search for">Presentation</string>
    <string name="search_filter_file_type_image" description="File type to search for">Image</string>
    <string name="search_filter_file_type_folder" description="File type to search for">Folder</string>
    <string name="search_filter_file_type_document" description="File type to search for">Document</string>
    <string name="search_filter_file_type_boxnote" description="File type to search for">Box Note</string>
    <string name="search_filter_file_type_video" description="File type to search for">Video</string>
    <string name="search_filter_file_type_audio" description="File type to search for">Audio</string>
    <string name="search_filter_file_type_see_more" desctiption="Hyperlink to show hidden file types">See more...</string>
    <string name="date_modified_label"  description="Header for section that limit search based on last modified date of the files and folders">Date Modified</string>
    <string name="any_time"  description="Label for setting to search for files modified at any time">Any Time</string>
    <string name="past_day" description="Label for setting to search for files modified in last day">Past Day</string>
    <string name="past_week" description="Label for setting to search for files modified in last week">Past Week</string>
    <string name="past_month" description="Label for setting to search for files modified in last month">Past Month</string>
    <string name="past_year" description="Label for setting to search for files modified in last year">Past Year</string>
    <string name="item_size_label" description="Header for section that limit search based on size of the files and folders">Size</string>
    <string name="item_size_any">Any Size</string>
    <string name="item_size_0_to_1" description="Label for setting to search for files with size in given range">0-1 MB</string>
    <string name="item_size_1_to_5" description="Label for setting to search for files with size in given range">1-5 MB</string>
    <string name="item_size_5_to_25" description="Label for setting to search for files with size in given range">1-25 MB</string>
    <string name="item_size_25_to_100" description="Label for setting to search for files with size in given range">25-100 MB</string>
    <string name="item_size_100_to_1000" description="Label for setting to search for files with size in given range">100 MB - 1 GB</string>
    <string name="search_filter_label_delimiter" desctiption="If user has selected some search filters, we show the same as a string. This is the delimiter for the same. For example this may be shown as 'PDF, Image, Audio, Last Week, 1-5 MB'. ', ' is picked from this string as a delimiter">,&#160;</string>

    <string name="box_browsesdk_0_byte" description="">0 bytes</string>
    <string name="box_browsesdk_bytes" description="abbreviation for bytes">B</string>
    <string name="box_browsesdk_kilobytes" description="a binary kiloabyte  1024 bytes">KB</string>
    <string name="box_browsesdk_megabytes" description="a binary megabyte  1024 * 1024 bytes">MB</string>
    <string name="box_browsesdk_gigabytes" description="a binary gigaabyte  1024 * 1024 bytes">GB</string>




</resources>
